--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ env:
     - LANDING_PAGE: "http://localhost:8888/geppetto"
 notifications:
   slack: metacell:5ALSeoP88DqIhORUJvxE56sq
-services:
-  - docker  
+before_install:
+  - sudo apt-get install python3-dev  
 script:
+
   - python utilities/install.py 
   - ./NetPyNE-UI
   - http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'})
