--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 script:
 
   - python utilities/install.py 
-  - ./NetPyNE-UI
+  - ./NetPyNE-UI &
   - http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'})
   - echo "$http_status"
   - cd webapp
