--- a/requirements.txt
+++ b/requirements.txt
@@ -38,8 +38,8 @@ libNeuroML==0.2.50
 lxml==4.5.1
 Mako==1.1.0
 MarkupSafe==1.1.1
-matplotlib==2.2.4
-matplotlib-scalebar==0.6.2
+matplotlib
+matplotlib-scalebar
 mistune==0.8.4
 multimethod==1.3
 nbconvert==5.6.1
