--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ blinker==1.4
 bokeh==2.1.1
 brotlipy==0.7.0
 cachetools==0.8.0
-certifi==2020.4.5.2
-certipy==0.1.3
 cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
@@ -38,13 +36,12 @@ libNeuroML==0.2.50
 lxml==4.5.1
 Mako==1.1.0
 MarkupSafe==1.1.1
-matplotlib==2.2.4
-matplotlib-scalebar==0.6.2
+matplotlib
+matplotlib-scalebar
 mistune==0.8.4
 multimethod==1.3
 nbconvert==5.6.1
 nbformat==5.0.6
-netpyne==0.9.6
 neuromllite==0.1.9
 NEURON==7.8.0.127
 numpy==1.18.5
@@ -62,7 +59,6 @@ prompt-toolkit==3.0.5
 ptyprocess==0.6.0
 pycosat==0.6.3
 pycparser==2.20
-pycurl==7.43.0.5
 pyecore==0.11.7
 pygeppetto==0.8.1
 Pygments==2.6.1
