--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ install:
   - sudo apt install libcurl4-openssl-dev libssl-dev
   - sudo apt-get install python3-dev
 script:
-
   - python utilities/install.py
   - ./NetPyNE-UI &
   - http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'})
   - echo "$http_status"
-  - cd webapp
+  - cd tests/frontend/e2e
+  - yarn install --frozen-lockfile
   - travis_retry npm run test -- --verbose --colors
   - exit 0
