--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ script:
   - http_status=$(curl -s -I $1 $LANDING_PAGE | grep HTTP/1.1 | awk {'print $2'})
   - echo "$http_status"
   - cd tests/frontend/e2e
-  - yarn install --frozen-lockfile
+  - npm install
   - travis_retry npm run test -- --verbose --colors
   - exit 0
