Add pip cache to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.7"
 node_js:
   - "12"
+cache: pip
 env:
   global:
     - secure: dn0FPQ5IG4M/3kdwnyI78ElQ308Vc3QnKAvkWfwMFb8QxDqxQdnTo7AV1qTMtbLrDNkeEWIgi4nc7jmXNtvGTwOfhAULVh6606Qs5B+ezTdwzajbbFMI8SKQx/pnTojOMu8dx7V4lMoR/YWcojR0VC1IWVC62TGbSB1k5BDGgH0=
@@ -22,5 +23,5 @@ script:
   - echo "$http_status"
   - cd tests/frontend/e2e
   - npm install
-  - travis_retry npm run test -- --verbose --colors
+  - travis_retry npm run test --colors
   - exit 0
