--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
   - echo "$http_status"
   - cd tests/frontend/e2e
   - npm install
-  - travis_retry npm run test -- --verbose --colors
+  - sleep 5 && travis_retry npm run test
   - exit 0
