Fix issue with headless chromium by updating to most recent package versions
Refs #182

--- a/tests/frontend/e2e/Dockerfile
+++ b/tests/frontend/e2e/Dockerfile
@@ -4,7 +4,7 @@ ENV CHROME_BIN=/usr/bin/chromium-browser
 ARG DEBIAN_FRONTEND=noninteractive
 
 COPY package.json .
-RUN npm install
+RUN npm install ci
 COPY . .
 	
 CMD ["npm", "run", "test"]
