--- a/k8s/cf_pipeline.yaml
+++ b/k8s/cf_pipeline.yaml
@@ -63,4 +63,8 @@ steps:
       custom_values:
         - 'hub_image_tag=${{CF_SHORT_REVISION}}'
         - 'singleuser_image_tag=${{CF_SHORT_REVISION}}'
+        - 'singleuser_cpu_limit=${{CPU_MAX}}'
+        - 'singleuser_cpu_guarantee=${{CPU_MIN}}'
+        - 'singleuser_memory_limit=${{MEMORY_MAX}}'
+        - 'singleuser_memory_guarantee=${{MEMORY_MIN}}'
         - 'proxy_secretToken=${{SECRET_TOKEN}}'
