#199 Configure airbnb eslint plugin
* Add airbnb eslint package
* Format two files as examples
* Disable eslint prebuild commands to avoid reformatting the complete codebase at once

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,23 +5,19 @@
   "repository": "https://github.com/MetaCell/NetPyNE-UI",
   "license": "MIT",
   "scripts": {
-    "prebuild": "eslint . --color",
     "build": "webpack --mode development -p --progress --devtool source-map",
-    "prebuild-dev": "eslint . --color --fix",
     "build-dev": "webpack --mode development --devtool source-map",
-    "prebuild-dev-noTest": "eslint . --color --fix",
     "build-dev-noTest": "webpack --mode development --devtool source-map --env.noTest=true",
-    "prebuild-dev-noTest:watch": "eslint . --color --fix",
     "build-dev-noTest:watch": "webpack --mode development --devtool source-map --env.noTest=true --progress --watch",
-    "prestart": "eslint . --color --fix",
     "start": "node --max_old_space_size=2048 node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress  --config webpack.config.dev.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@geppettoengine/geppetto-client": "openworm/geppetto-client#v2.4.0",
     "@material-ui/icons": "^4.9.1",
-    "less-vars-to-js": "^1.3.0",
     "@material-ui/lab": "^4.0.0-alpha.51",
+    "less-vars-to-js": "^1.3.0",
+    "react": "^17.0.1",
     "react-redux": "^7.2.0"
   },
   "devDependencies": {
@@ -42,7 +38,12 @@
     "casperjs": "^1.1.4",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
-    "eslint": "^6.0.1",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "exports-loader": "^0.6.3",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
