#277 Implement fix 1: force neuron.nrn_dll_loaded
With this fix workspace mod mechanisms won't be loaded twice. See issue #277 for more info

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ init.py
 webapp/node_modules
 webapp/geppetto-client
 webapp/build
-netpyne_workspace
+workspace
 tests/frontend/e2e/node_modules
 Dockerfile_mini
 npm*
