--- a/jupyter_hub/Dockerfile_spawner
+++ b/jupyter_hub/Dockerfile_spawner
@@ -21,7 +21,7 @@ RUN /bin/bash -c "source activate snakes && python --version"
 RUN /bin/bash -c "source activate snakes && exec python install.py branch $netpyneuiBranch"
 WORKDIR /home/jovyan
 RUN git clone https://github.com/Neurosim-lab/netpyne_workspace
-WORKDIR /home/jovyan/netpyne_workspace
+WORKDIR /home/jovyan/workspace
 RUN ln -sfn /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/netpyne_ui/tests tests
 
 # Copy jupyterhub_config
