--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@geppettoengine/geppetto-client": "git+https://git@github.com/openworm/geppetto-client.git#hotfix/html-viewer",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
     "less-vars-to-js": "^1.3.0",
     "react": "^17.0.1",
-    "react-redux": "^7.2.0"
+    "react-dom": "^16.4.0",
+    "react-redux": "^7.2.0",
+    "react-sortable-tree": "^2.8.0",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
