--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
+    "jquery": "^3.6.0",
     "less-vars-to-js": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^16.4.0",
