--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,6 +22,7 @@
     "less-vars-to-js": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^16.4.0",
+    "react-json-view": "^1.21.3",
     "react-redux": "^7.2.0",
     "react-sortable-tree": "^2.8.0",
     "redux": "^4.1.0"
