--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
     "jquery": "^3.6.0",
+    "js-base64": "^3.6.1",
     "less-vars-to-js": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^16.4.0",
