--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-2": "^7.0.0",
     "@types/jasmine": "^2.8.8",
+    "@types/js-base64": "^3.3.1",
     "@types/material-ui": "^0.21.5",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
