--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ ruamel-yaml==0.15.80
 ruamel.yaml.clib==0.2.0
 scipy==1.4.1
 Send2Trash==1.5.0
+sentry_sdk==1.5.2
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.1.0
