--- a/webapp/package.json
+++ b/webapp/package.json
@@ -83,8 +83,15 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "5.0.2",
     "raw-loader": "^0.5.1",
     "react-resize-detector": "^6.7.4",
+    "sass": "^1.32.12",
+    "sass-loader": "^10.0.5",
     "slimerjs": "^1.0.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.13.2",
