--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,7 +36,9 @@
     "react-redux": "^7.2.0",
     "react-sortable-tree": "^2.8.0",
     "redux": "^4.1.0",
-    "three": "0.111.0"
+    "three": "0.111.0",
+    "sass-loader": "^7.2.0",
+    "node-sass": "^5.0.0"
   },
   "resolutions": {
     "@material-ui/core": "4.11.4"
@@ -83,15 +85,8 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "5.0.2",
     "raw-loader": "^0.5.1",
     "react-resize-detector": "^6.7.4",
-    "sass": "^1.32.12",
-    "sass-loader": "^10.0.5",
     "slimerjs": "^1.0.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.13.2",
