--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,9 +36,9 @@
     "react-redux": "^7.2.0",
     "react-sortable-tree": "^2.8.0",
     "redux": "^4.1.0",
-    "three": "0.111.0",
+    "sass": "^1.49.0",
     "sass-loader": "^7.2.0",
-    "node-sass": "^5.0.0"
+    "three": "0.111.0"
   },
   "resolutions": {
     "@material-ui/core": "4.11.4"
