--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,6 +32,7 @@
     "less-vars-to-js": "^1.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^16.4.0",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.0",
