--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.4.0",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.0",
+    "react-resize-detector": "^6.7.4",
     "react-sortable-tree": "^2.8.0",
     "redux": "^4.1.0",
     "sass": "^1.49.0",
