Fix deployment values to support https override

--- a/k8s/cf_values.yaml
+++ b/k8s/cf_values.yaml
@@ -30,7 +30,12 @@ scheduling:
 
 auth:
   type: tmp
-
+proxy:
+  https:
+    enabled: false
+    hosts: []
+    letsencrypt:
+      contactEmail:
 singleuser:
   storage:
     type: none
