--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ jedi==0.17.0
 Jinja2==2.11.2
 jsonpickle==2.1.0
 jsonschema==3.2.0
+jupyter_geppetto==1.1.1
 jupyterthemes==0.20.0
 kiwisolver==1.2.0
 lesscpy==0.14.0
