--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,7 +20,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@metacell/geppetto-meta-client": "1.0.0-final",
-    "@metacell/geppetto-meta-core": "1.0.0-final",
+    "@metacell/geppetto-meta-core": "file:.yalc/@metacell/geppetto-meta-core",
     "@metacell/geppetto-meta-ui": "1.0.0-final",
     "@nosferatu500/react-sortable-tree": "3.0.5",
     "@sentry/integrations": "^6.16.1",
