--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geppetto-netpyne",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "Geppetto NetPyNE-UI frontend.",
   "repository": "https://github.com/MetaCell/NetPyNE-UI",
   "license": "MIT",
@@ -19,9 +19,9 @@
     "@material-ui/core": "4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@metacell/geppetto-meta-client": "1.0.0-final",
-    "@metacell/geppetto-meta-core": "1.0.0-final",
-    "@metacell/geppetto-meta-ui": "1.0.0-final",
+    "@metacell/geppetto-meta-client": "1.1.0",
+    "@metacell/geppetto-meta-core": "1.1.0",
+    "@metacell/geppetto-meta-ui": "1.1.0",
     "@nosferatu500/react-sortable-tree": "3.0.5",
     "@sentry/integrations": "^6.16.1",
     "@sentry/react": "^6.16.1",
