--- a/webapp/package.json
+++ b/webapp/package.json
@@ -37,7 +37,7 @@
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.0",
     "react-sortable-tree": "^2.8.0",
-    "redux": "^4.1.0",
+    "redux": "4.1.2",
     "sass": "^1.49.0",
     "sass-loader": "^7.2.0",
     "three": "0.111.0"
