--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,32 @@ sentry_sdk==1.5.2
 dacite==1.6.0
 h5py==3.7.0
 jsonpickle==2.1.0
+Pygments==2.6.1
+PyJWT==1.7.1
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+PySocks==1.7.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+python-json-logger==0.1.11
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.1
+qtconsole==4.7.5
+QtPy==1.9.0
+RestrictedPython==5.0
+ruamel-yaml==0.15.80
+ruamel.yaml.clib==0.2.0
+scipy==1.4.1
+Send2Trash==1.5.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.1.0
+traitlets==4.3.3
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+zipp==3.1.0
