--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs: 
-  too-map_test:
+  EEG_Dipole-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
