--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
           cache-dependency-path: frontend/e2e/tests/package-lock.json
     - name: EEG and Dipole Plot snapshot test using Tut#1
       run: |
-          cd frontend/e2e
+          cd tests/frontend/e2e
           #install dependencies
           npm ci
           # run EEG and Dipole Plot test
@@ -51,7 +51,7 @@ jobs:
           cache-dependency-path: frontend/e2e/tests/package-lock.json
     - name: Experiment Manager snapshot test using Tut#1
       run: |
-          cd frontend/e2e
+          cd tests/frontend/e2e
           #install dependencies
           npm ci
           # run Experiment Manager test
