--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,7 +58,7 @@ jobs:
           npm run Experiment_Manager_test
       env:
           CI: true
-  Tutorial#1 - smoke test:
+  Tutorial_1-SmokeTest:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
@@ -80,7 +80,7 @@ jobs:
           npm run Tutorial_1_test
       env:
           CI: true
-  Tutorial#2 - smoke test:
+  Tutorial_2-SmokeTest:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
@@ -102,7 +102,7 @@ jobs:
           npm run Tutorial_2_test
       env:
           CI: true
-  Tutorial#3a - smoke test:
+  Tutorial_3a-SmokeTest:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
@@ -124,7 +124,7 @@ jobs:
           npm run Tutorial_3A_test
       env:
           CI: true
-  Tutorial#3b - smoke test:
+  Tutorial_3b-SmokeTest:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
@@ -146,7 +146,7 @@ jobs:
           npm run Tutorial_3B_test
       env:
           CI: true
-  Tutorial#3c - smoke test:
+  Tutorial_3c-SmokeTest:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
@@ -168,7 +168,7 @@ jobs:
           npm run Tutorial_3C_test
       env:
           CI: true
-  Tutorial#4 - smoke test:
+  Tutorial_4-SmokeTest:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
