--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,7 +58,7 @@ jobs:
           npm run Experiment_Manager_test
       env:
           CI: true
-  COntrol_Panel-test:
+  Control_Panel-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
     container: lironavon/docker-puppeteer-container:14.16.0
@@ -76,8 +76,8 @@ jobs:
           cd tests/frontend/e2e
           #install dependencies
           npm ci
-          # run Experiment Manager test
-          npm run Experiment_Manager_test
+          # run Control Panel test
+          npm run Control_Panel_test
       env:
           CI: true
   Tutorial_1-SmokeTest:
