changing image used in the test build

--- a/k8s/cf_pipeline.yaml
+++ b/k8s/cf_pipeline.yaml
@@ -51,7 +51,7 @@ steps:
       version: '2'
       services:
         app:
-          image: '${{BuildingHub}}'
+          image: '${{BuildingNetPyNE-UI}}'
           working_dir: /home/pptruser
           ports:
             - 80
