--- a/k8s/cf_pipeline.yaml
+++ b/k8s/cf_pipeline.yaml
@@ -24,6 +24,7 @@ steps:
         type: build
         stage: build
         image_name: netpyne-ui
+        dockerfile: Dockerfile
         working_directory: ${{main_clone}}
         tag: 'np-${{CF_SHORT_REVISION}}'
         build_arguments:
