--- a/tests/frontend/e2e/Dockerfile.testing
+++ b/tests/frontend/e2e/Dockerfile.testing
@@ -13,5 +13,12 @@ COPY . .
 ENV TEST_URL=https://stage.netpyne.metacell.us/
 
 
+# Add the following lines to change permissions
+USER root
+RUN chown -R pptruser:pptruser /home/pptruser
+
+USER pptruser
+
+
 
 
