--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ mistune==0.8.4
 multimethod==1.3
 nbconvert==5.6.1
 nbformat==5.0.6
-neuromllite==0.1.9
+neuromllite==0.5.1
 netpyne==1.0.4.1
 NEURON==8.2.2
 numpy==1.18.5
@@ -66,7 +66,7 @@ pygeppetto==0.8.1
 Pygments==2.6.1
 PyJWT==1.7.1
 PyLEMS==0.4.9.3
-pyNeuroML==0.3.15
+pyNeuroML>=0.7.1
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
