--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-airspeed==0.5.20
+airspeed==0.5.4dev-20150515
 alembic==1.4.2
 async-generator==1.10
 attrs==19.3.0
@@ -29,12 +29,10 @@ jupyter-core==4.9.1
 jupyter-server==1.11.2
 jupyterhub==1.5.0
 jupyterlab==3.2.4
-neuromllite==0.5.1
 jupyterthemes==0.20.0
 kiwisolver==1.2.0
 lesscpy==0.14.0
-libNeuroML==0.4.0
-lfpykit==0.5.1
+libNeuroML==0.2.50
 lxml==4.5.1
 Mako==1.1.0
 MarkupSafe==1.1.1
@@ -44,6 +42,7 @@ mistune==0.8.4
 multimethod==1.3
 nbconvert==5.6.1
 nbformat==5.0.6
+neuromllite==0.5.1
 netpyne==1.0.4.1
 NEURON==8.2.2
 numpy==1.18.5
@@ -64,14 +63,10 @@ pycosat==0.6.3
 pycparser==2.20
 pyecore==0.11.7
 pygeppetto==0.8.1
-PyLEMS==0.5.9
-pyNeuroML==0.7.1
-sentry_sdk==1.5.2
-dacite==1.6.0
-h5py==3.7.0
-jsonpickle==2.1.0
 Pygments==2.6.1
 PyJWT==1.7.1
+PyLEMS==0.4.9.3
+pyNeuroML>=0.7.1
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
@@ -89,6 +84,7 @@ ruamel-yaml==0.15.80
 ruamel.yaml.clib==0.2.0
 scipy==1.4.1
 Send2Trash==1.5.0
+sentry_sdk==1.5.2
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.1.0
@@ -99,3 +95,4 @@ webencodings==0.5.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 zipp==3.1.0
+dacite==1.6.0
