Rolledback some changes

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,9 +19,9 @@
     "@material-ui/core": "4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@metacell/geppetto-meta-client": "file:.yalc/@metacell/geppetto-meta-client",
-    "@metacell/geppetto-meta-core": "file:.yalc/@metacell/geppetto-meta-core",
-    "@metacell/geppetto-meta-ui": "file:.yalc/@metacell/geppetto-meta-ui",
+    "@metacell/geppetto-meta-client": "1.2.0",
+    "@metacell/geppetto-meta-core": "1.2.0",
+    "@metacell/geppetto-meta-ui": "1.2.0",
     "@nosferatu500/react-sortable-tree": "3.0.5",
     "@sentry/integrations": "^6.16.1",
     "@sentry/react": "^6.16.1",
